syntax = "proto3";

package learn;
option go_package = "server/djentry";

message UserInfo {
    int32 UserType = 1;
    string UserName = 2;
    string UserInfo = 3;
}
